# OpenCharaAgent

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTENT_LICENSE.md  CONTRIBUTING.md  NOTICE.md  README.md  README.zh-CN.md  SECURITY.md  app.py  install.sh  pyproject.toml  requirements.txt  run.sh  run079.sh  run079_control.sh  run079_display.sh  run079_web.sh  send079.sh  start079.sh
.bin/: ollama
.codex-fleet/: port-needs.md  seam-lunamoth.md  spec-browser.md  spec-general-tools.md  spec-integration-layer.md  spec-memory-skills.md  spec-patch-search.md  spec-terminal-process.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/electron/: main.cjs  preload.cjs
apps/web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  protocol.test.ts  protocol.ts  rpc.test.ts  rpc.ts
archive/cards-zh/: LunaMoth.card.zh.json  Quinn.card.zh.json
archive/demos/: demo_chat.html
archive/reviews/: 2026-06-15-art-integration-review.md
assets/: banner.html
cards/: LICENSE-CC-BY-SA-3.0.md  LunaMoth.en.json  LunaMoth.zh.json  Quinn.en.json  Quinn.zh.json  SCP-079.en.json  SCP-079.zh.json
cards/Hoshi/: card.json
cards/K-9/: card.json
cards/LunaMoth/: card.json
cards/Mars/: card.json
cards/Quinn/: card.json
cards/Vale/: card.json
cards/Vesper/: card.json
cards/Yan/: card.json
characters/: LunaMoss.en.json  LunaMoss.zh.json  LunaMoth.en.json  LunaMoth.zh.json  Quinn.en.json  SCP-079.en.json  SCP-079.zh.json
deploy/: Dockerfile  compose.yml  entrypoint.sh
docs/: AGENT-FIELD-NOTES.md  CLIENT-AND-DEPLOY-PLAN.md  FEEDBACK-2026-06-17.md  OPEN-WORK.md  SEC1-R9-R10-R11-BUILD.md  handover-cards-brief.md  handover-orchestrator.md  multimodal-contract.md  webui-redesign-0612.md
docs/archive/: context-design.md  design.md  handover-cards-brief.md  mockup.html  webui-needs.md  wechat-personal-research.md
docs/desktop/: hermes-ui-notes.md  supervisor.md  webui-needs.md  webui-redesign-0612.md
docs/tasks/: T1-context-design.md  T2-server-gateway.md  T3-integrate.md
prompts/: 079_personality_en.md  079_personality_zh.md  default_persona_en.md  default_persona_zh.md  tools_en.md  tools_zh.md
sandbox/: containment_status.json
sandbox/files/: welcome.txt
scp079/: agent.py  audit.py  config.py  context.py  control.py  github_memory.py  llm.py  memory.py  persona.py  python_sandbox.py  sandbox.py  state.py  terminal.py  tools.py  ui.py
scripts/: build-wheel.sh
src/chara/: config.py  updater.py
src/chara/assets/: wordmark_compact.txt
src/chara/content/: __init__.py  cards.py  image_providers.py  imaging.py  knobs.py  persona.py  rules.py  themes.py  worldinfo.py
src/chara/core/: __init__.py  _stream_util.py  agent.py  attachments.py  cache.py  commands.py  (+6 more)
src/lunamoss/: agent.py  control.py  persona.py  themes.py  tui.py
src/lunamoth/: agent.py  cleanup.py  config.py  context.py  llm.py  memory.py  rules.py  settings.py  soul.py  state.py  terminal.py  tools.py  transcript.py  tui.py  updater.py
tests/: conftest.py  test_agent_neutral.py  test_architecture.py  test_audit.py  test_aux_complete.py  test_background_jobs.py  test_browser.py  test_browser_jail.py  test_browser_url_guard.py  test_cache.py  test_card_import.py  test_card_market.py  test_cards.py  test_chara_knobs.py  test_compaction.py  test_console_input.py  test_content_dir.py  test_context.py  test_cross_lang_drift.py  test_daemon.py  test_desktop_auth.py  test_desktop_hub.py  test_discord_slack.py  test_execute_delegate.py  test_file_tools.py  test_force_sandbox.py  test_gateway_boundary.py  test_global_key.py  test_goals.py  test_homepage_route.py  test_hub_updates.py  test_hub_webrpc.py  test_image_gen.py  test_image_multiprovider.py  test_imaging.py  test_landlock_isolation.py  test_living.py  test_llm_hardening.py  test_login_password.py  test_matte.py  (+56 more)
toolpacks/: sandbox.json
visuals/: README.md  build_character.py  cardbrief.py  genviz.py  localmatte.py  make_demo.py  rematte.py  removebg.py  template.py
worlds/: LunaMoss.en.json  LunaMoss.zh.json
(+312 files in other folders)
