[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunamoth"
version = "0.1.0"
description = "LunaMoth: a local-first agentic character tavern."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "textual>=6.0,<7",
]

[project.scripts]
lunamoth = "lunamoth.front.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
server = ["websockets>=12"]
messaging = [
    "cryptography>=42",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
