[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunamoth"
version = "0.1.0"
description = "LunaMoth: a local-first agentic character tavern."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "textual>=6.0,<7",
]

[project.scripts]
lunamoth = "lunamoth.front.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
server = ["websockets>=12"]
messaging = [
    "qrcode>=8",
    "websockets>=12",
]
# Full skills nested-frontmatter parsing (flat SKILL.md works without it).
tools = ["pyyaml>=6"]
# The browser_* tools shell out to the Node `agent-browser` CLI + Chromium
# (installed via `lunamoth setup`, not pip); only browser_cdp/dialog need a
# Python dep. The real weight is non-Python and per-host.
browser = ["websockets>=12"]
# Local matting (抠像) for the visuals pipeline (R9/R11). HEAVY ML stack — kept
# out of the base install; the matte model itself is downloaded from Settings.
visuals = [
    "rembg[cpu]>=2.0.50",
    "pillow>=10",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
