[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunamoth"
version = "0.1.12"
description = "LunaMoth: a local-first agentic character tavern."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "textual>=6.0,<7",
  "pillow>=10",
]

[project.scripts]
lunamoth = "lunamoth.front.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
server = ["websockets>=12"]
messaging = [
    "qrcode>=8",
    "websockets>=12",
]
# Full skills nested-frontmatter parsing (flat SKILL.md works without it).
tools = ["pyyaml>=6"]
# The browser_* tools shell out to the Node `agent-browser` CLI + Chromium
# (installed via `lunamoth setup`, not pip); only browser_cdp/dialog need a
# Python dep. The real weight is non-Python and per-host.
browser = ["websockets>=12"]
# Local matting (抠像) for the visuals pipeline (R9/R11). HEAVY ML stack — kept
# out of the base install; the matte model itself is downloaded from Settings.
visuals = [
    "rembg[cpu]>=2.0.50",
    # 3.12-capable floors: an unconstrained solve of rembg→pymatting→numba picks
    # numba 0.53 / llvmlite 0.36 (Python <3.10 only) and fails to build on 3.12.
    "numba>=0.59",
    "llvmlite>=0.42",
    "pillow>=10",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]

# Bundle the built frontend SPA into the wheel (hermes-agent's model:
# reference/hermes-agent/pyproject.toml:303-304). `apps/web/` builds to
# src/lunamoth/front/webui/ (gitignored), which `packages.find` above picks up
# as part of the `lunamoth` package; this glob attaches that built dir as
# package-data so `python -m build` packs it into the wheel. No node and no
# committed dist required at install — the wheel carries the prebuilt UI.
[tool.setuptools.package-data]
# front/webui/  — the built SPA (copied in by build-wheel.sh).
# _bundled/      — repo-root cards/ + toolpacks/ copied in by build-wheel.sh so a
#                  WHEEL install ships the default personas + tool packs (config.content_dir
#                  falls back here when there is no repo root). Without this a wheel
#                  deploy has no toolpacks → charas lose all tools (2026-06-17 P0).
lunamoth = ["front/webui/**/*", "_bundled/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
